# ferret

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile
crates/ferret-client/: Cargo.toml
crates/ferret-client/src/: lib.rs
crates/ferret-desktop/: Cargo.toml  tauri.conf.json
crates/ferret-desktop/capabilities/: default.json
crates/ferret-desktop/icons/: README.md  icon.icns
crates/ferret-desktop/src/: lib.rs  main.rs
crates/ferret-domain/: Cargo.toml
crates/ferret-domain/src/: attributes.rs  category.rs  deal.rs  family.rs  lib.rs  listing.rs  matching.rs  normalize.rs  price.rs  refine.rs  settings.rs  status.rs  watch.rs
crates/ferret-server/: Cargo.toml  ferret.example.toml
crates/ferret-server/migrations/: 0001_init.sql  0002_lifecycle.sql  0003_llm.sql  0004_categories.sql  0005_settings.sql  0006_llm_requests.sql  0007_moderation.sql
crates/ferret-server/src/: api.rs  config.rs  db.rs  db_category.rs  interpret.rs  llm.rs  main.rs  notify.rs  pipeline.rs  politeness.rs  scheduler.rs  search.rs  seeds.rs  state.rs  watches.rs  websearch.rs
crates/ferret-server/src/scrape/: ebay.rs  generic.rs  leboncoin.rs  mod.rs  shopify.rs
crates/ferret-server/tests/fixtures/: ebay_search.html  example_board.html  leboncoin_empty.html  leboncoin_search.html  shopify_products.json
crates/ferret-ui/: Cargo.toml  build.rs
crates/ferret-ui/src/: about.rs  categories.rs  deals.rs  echarts.rs  guided.rs  lib.rs  price_chart.rs  settings.rs  sparkline.rs  status.rs  watches.rs
crates/ferret-web/: .gitignore  Cargo.toml  Trunk.toml  index.html  styles.css
crates/ferret-web/src/: main.rs
docs/: zeus-config-example.nix
docs/superpowers/plans/: 2026-07-16-ferret-core-backend.md  2026-07-16-ferret-frontend.md  2026-07-16-ferret-leboncoin-source.md  2026-07-16-ferret-llm-refinement.md  2026-07-16-ferret-nixos-module.md  2026-07-17-ferret-more-sources.md
docs/superpowers/specs/: 2026-07-16-ferret-design.md  2026-07-17-feedback-liveness-design.md  2026-07-17-guided-watch-creation-design.md  2026-07-17-settings-editor-responsive-design.md  2026-07-18-llm-polish-design.md  2026-07-18-llm-usability-design.md  2026-07-19-llm-cot-conversation-design.md  2026-07-20-deal-moderation-design.md  2026-07-20-multiselect-llm-signal-config-design.md  2026-07-20-notification-noise-design.md  2026-07-22-watch-charts-outcomes-design.md
nix/: module.nix
scripts/: stealth-fetch.py
