[workspace]
resolver = "2"
members = ["crates/ferret-domain", "crates/ferret-server"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Tibo <thibaudbalem@gmail.com>"]
repository = "https://github.com/tdbmxyz/ferret"

[workspace.dependencies]
# internal crates
ferret-domain = { path = "crates/ferret-domain" }

# shared
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
url = { version = "2", features = ["serde"] }
thiserror = "2"
regex = "1"

# server
anyhow = "1"
futures = "0.3"
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
figment = { version = "0.10", features = ["toml", "env"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "chrono", "migrate", "derive", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
scraper = "0.23"
async-trait = "0.1"

[profile.release]
lto = "thin"
strip = true
