[package]
name = "ferret-desktop"
description = "Tauri shell embedding the ferret web frontend (desktop + mobile)"
version.workspace = true
edition.workspace = true

# Tauri's Android target builds this crate as a library.
[lib]
name = "ferret_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "ferret-desktop"
path = "src/main.rs"

[dependencies]
tauri.workspace = true
url.workspace = true

[build-dependencies]
tauri-build.workspace = true
