[package]
name = "ferret-domain"
description = "Shared domain types, extraction and matching logic for ferret"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
url.workspace = true
regex.workspace = true
