[package]
name = "ferret-ui"
description = "Leptos component library shared by web and desktop"
version.workspace = true
edition.workspace = true

[dependencies]
ferret-domain.workspace = true
ferret-client.workspace = true
serde_json.workspace = true
leptos.workspace = true
chrono.workspace = true
url.workspace = true
uuid.workspace = true
web-sys = { workspace = true, features = ["Window", "Storage", "Location", "Document", "Element", "HtmlElement", "CssStyleDeclaration"] }
wasm-bindgen.workspace = true
js-sys.workspace = true
